--- a/ws2122/index.html
+++ b/ws2122/index.html
@@ -27,43 +27,43 @@
       <div class="headerItem"><p>Montag</p></div>
       <div class="item ra"><p class="moduleTime">10:15-11:45</p><p class="moduleTxt">Rechnerarchitektur</p><p class="subTxt">Q&A</p><a class="zoomIcon" href="https://uni-bielefeld.zoom.us/j/98278914859?pwd=VVNHbGZHVHpFNEN3VUk4Vy9EWDNzdz09"><i class="fas fa-video"></i></a></div>
       <div class="item"></div>
-      <div class="item tut gmlTut"><p class="moduleTime">12:15-13:45</p><p class="moduleTxt">Maschinelles Lernen</p><p class="subTxt">Tutorium</p><p class="locationTxt">T2-233</p></div>
-      <div class="item tut gkkTut"><p class="moduleTime">14:15-15:45</p><p class="moduleTxt">Künstliche Kognition</p><p class="subTxt">Tutorium</p><p class="locationTxt">VOR ORT</p></div>
+      <div class="item tut gmlTut"><p class="moduleTime">12:15-13:45</p><p class="moduleTxt">Maschinelles Lernen</p><p class="subTxt">Tutorium</p><p class="locationTxt">T2-204</p></div>
+      <div class="item tut gkkTut"><p class="moduleTime">14:15-15:45</p><p class="moduleTxt">Künstliche Kognition</p><p class="subTxt">Tutorium</p><p class="locationTxt">V2-121</p></div>
       <div class="item"></div>
       <div class="item tut matheTut"><p class="moduleTime">18:15-19:45</p><p class="moduleTxt">Vertiefung Mathe</p><p class="subTxt">Tutorium</p><a class="zoomIcon" href="https://uni-bielefeld.zoom.us/j/95856138931?pwd=bXNmeXlrK00yOWRCcFZKQ1VNbGpldz09"><i class="fas fa-video"></i></a></div>
     </div>
     <div class="row">
       <div class="headerItem"><p>Dienstag</p></div>
       <div class="item"></div>
-      <div class="item"><p class="placeholderTxt">Ü RA (2)*</p></div>
+      <div class="item"></div>
       <div class="item gml"><p class="moduleTime">12:15-13:45</p><p class="moduleTxt">Maschinelles Lernen</p><p class="subTxt">Q&A</p><a class="zoomIcon" href="https://uni-bielefeld.zoom.us/j/94957231520?pwd=bVBwMUVidzZ4SGhrR0srVHViN2tjQT09"><i class="fas fa-video"></i></a></div>
       <div class="item"></div>
-      <div class="item tut softwTut"><p class="moduleTime">16:15-17:45</p><p class="moduleTxt">Software Engineering</p><p class="subTxt">Seminar</p><p class="locationTxt">D2-136</p></div>
+      <div class="item tut softwTut"><p class="moduleTime">16:15-17:45</p><p class="moduleTxt">Software Engineering</p><p class="subTxt">Seminar</p><p class="locationTxt">D2-136</p><a class="zoomIcon" href="https://lernraumplus.uni-bielefeld.de/mod/url/view.php?id=492165"><i class="fas fa-video"></i></a></div>
       <div class="item"></div>
     </div>
     <div class="row">
       <div class="headerItem"><p>Mittwoch</p></div>
       <div class="item"></div>
       <div class="item"></div>
-      <div class="item">Ü RA (1)*</div>
+      <div class="item tut raTut"><p class="moduleTime">12:15-13:45</p><p class="moduleTxt">Rechnerarchitektur</p><p class="subTxt">Tutorium</p><a class="zoomIconDisabled" href=""><i class="fas fa-video"></i></a></div>
       <div class="item mathe"><p class="moduleTime">14:15-15:45</p><p class="moduleTxt">Vertiefung Mathe</p><p class="subTxt">Vorlesung</p><a class="zoomIcon" href="https://uni-bielefeld.zoom.us/j/99590266069?pwd=clVPQ1R0RFFpZjFTLy9QWXlVenRJQT09"><i class="fas fa-video"></i></a></div>
-      <div class="item"><p class="placeholderTxt">Ü RA (3)*</p></div>
+      <div class="item"></div>
       <div class="item"></div>
     </div>
     <div class="row">
       <div class="headerItem"><p>Donnerstag</p></div>
-      <div class="item"><p class="placeholderTxt"><s>Ü RA*</s></p></div>
+      <div class="item"></div>
       <div class="item gkk"><p class="moduleTime">10:15-11:45</p><p class="moduleTxt">Künstliche Kognition</p><p class="subTxt">Vorlesung</p><p class="locationTxt">CITEC, ONLINE</p><a class="zoomIcon" href="https://uni-bielefeld.zoom.us/j/97844339936?pwd=VTZlS0ZHcHZ4YkxaQStjVW9kK1E4dz09"><i class="fas fa-video"></i></a></div>
       <div class="item softw"><p class="moduleTime">12:15-13:45</p><p class="moduleTxt">Software Engineering</p><p class="subTxt">Vorlesung</p><p class="locationTxt">H4, ONLINE</p><a class="zoomIcon" href="https://uni-bielefeld.zoom.us/j/99037007233?pwd=S1R0THVDeTFYcnZNNWc3dm5tWFFsZz09"><i class="fas fa-video"></i></a></div>
       <div class="item datab"><p class="moduleTime">14:15-15:45</p><p class="moduleTxt">Datenbanken</p><p class="subTxt">Vorlesung</p><a class="zoomIcon" href="https://uni-bielefeld.zoom.us/j/92498693783?pwd=eklWYU5KQ0Y2RGxjS1UrWXNzck5MZz09"><i class="fas fa-video"></i></a></div>
-      <div class="item"><p class="placeholderTxt"><s>Ü RA*</s></p></div>
+      <div class="item"></div>
       <div class="item"></div>
     </div>
     <div class="row">
       <div class="headerItem"><p>Freitag</p></div>
       <div class="item"></div><div class="item"></div>
       <div class="item tut databTut"><p class="moduleTime">12:15-13:45</p><p class="moduleTxt">Datenbanken</p><p class="subTxt">Tutorium</p><p class="locationTxt">V7-140</p></div>
-      <div class="item tut softwTut"><p class="moduleTime">14:15-15:45</p><p class="moduleTxt">Software Engineering</p><p class="subTxt">Tutorium</p><p class="locationTxt">V2-221/222</p></div>
+      <div class="item tut softwTut"><p class="moduleTime">14:15-15:45</p><p class="moduleTxt">Software Engineering</p><p class="subTxt">Tutorium</p><p class="locationTxt">V2-221/222</p><a class="zoomIcon" href="https://lernraumplus.uni-bielefeld.de/mod/url/view.php?id=492040"><i class="fas fa-video"></i></a></div>
       <div class="item"></div>
       <div class="item"></div>
     </div>
@@ -71,6 +71,7 @@
 
   <section id="rightPart">
     <!---Fächer-->
+    <p id="upperTitle" class="title">Module</p>
     <div class="modules">
       <div class="moduleItem">
         <a class="moduleLink" id="ekvv" href="https://ekvv.uni-bielefeld.de/kvv_publ/publ/benvw_Login_MatrikelAct">eKVV</a>
@@ -91,6 +92,7 @@
         <a class="moduleLink lrplus" href="https://lernraumplus.uni-bielefeld.de/course/view.php?id=11465">LR+ Vorlesung</a>
         <a class="moduleLink lrplus" href="https://lernraumplus.uni-bielefeld.de/course/view.php?id=11464">LR+ Tutorium</a>
         <a class="moduleLink lrplus" href="https://lernraumplus.uni-bielefeld.de/course/view.php?id=11466">LR+ Seminar</a>
+        <a class="moduleLink matrix" href="https://app.element.io/#/room/#uebung6-se-teams:uni-bielefeld.de">Matrix</a>
       </div>
       <div class="moduleItem">
         <p class="moduleTitle">Mathe Vertiefung</p>
@@ -111,13 +113,33 @@
       </div>
     </div>
     <!--Punkte-->
+    <p class="title">Punktetabelle</p>
     <div class="points" id="points">
-      <button onclick="readRequest(true)"><i class="fas fa-sync-alt"></i></button>
       <!--<div class="scala">
         <p class="scalaTitle">template</p>
         <p class="scalaPercentage">50%</p>
       </div>-->
     </div>
+    <!--Task -->
+    <p class="title">Aufgaben (working 0%)</p>
+    <div class="tasks">
+      <div class="task"><button class="outdatedBtn"><i class="fas fa-check"></i></button><p class="taskTitle outdated">Semesterbeitrag überweisen</p><p class="taskDate">Mo 18.7.</p></div>
+      <div class="task"><button><i class="fas fa-check"></i></button><p class="taskTitle">Exmatrikulieren</p><p class="taskDate">Di 13.37.</p></div>
+      <div class="taskInput">
+        <input id="titleInput" type="text" placeholder="Title goes here">
+        <!--<select name="modules">
+          <option value="ra">Recherarchitektur</option>
+          <option value="db">Datenbanken</option>
+          <option value="ml">Maschinelles Lernen</option>
+          <option value="kk">Künstliche Kognition</option>
+          <option value="se">Software Engineering</option>
+          <option value="mathe">Mathe Vertiefung</option>
+        </select>-->
+        <input id="dateInput" type="text" placeholder="DD/MM" maxlength="5">
+        <button class="submit"><i class="fas fa-arrow-right"></i></button>
+      </div>
+    </div>
+    <p class="title">Notizen</p>
     <!--Notes-->
     <div class="notes" id="notes">
       Keine Notizen<br>( ͡ ͡° ͜ ʖ ͡ ͡°)<br>╭☞ ╭☞
@@ -126,6 +148,7 @@
 
   <!--KW-->
   <p class="kalenderwoche" id="kw">KW 187</p>
+  <button id="refresh" onclick="readRequest(true)"><i class="fas fa-sync-alt"></i></button>
 
 </body>
 </html>
