--- a/ws2122/index.html
+++ b/ws2122/index.html
@@ -112,6 +112,15 @@
         <a class="moduleLink video" href="https://uni-bielefeld.cloud.panopto.eu/Panopto/Pages/Sessions/List.aspx#folderID=%22c1b650fe-62e1-40f7-ab98-ada500b5a837%22">Videos</a>
       </div>
     </div>
+    <!--Task -->
+    <p class="title">TO-DO</p>
+    <div id="tasks" class="tasks">
+      <div class="taskInput">
+        <input id="titleInput" type="text" placeholder="New Task">
+        <input id="dateInput" type="text" placeholder="DD/MM" maxlength="5">
+        <button class="submit" onclick="addTask()"><i class="fas fa-arrow-right"></i></button>
+      </div>
+    </div>
     <!--Punkte-->
     <p class="title">Punktetabelle</p>
     <div class="points" id="points">
@@ -120,29 +129,10 @@
         <p class="scalaPercentage">50%</p>
       </div>-->
     </div>
-    <!--Task -->
-    <p class="title">Aufgaben (working 0%)</p>
-    <div class="tasks">
-      <div class="task"><button class="outdatedBtn"><i class="fas fa-check"></i></button><p class="taskTitle outdated">Semesterbeitrag überweisen</p><p class="taskDate">Mo 18.7.</p></div>
-      <div class="task"><button><i class="fas fa-check"></i></button><p class="taskTitle">Exmatrikulieren</p><p class="taskDate">Di 13.37.</p></div>
-      <div class="taskInput">
-        <input id="titleInput" type="text" placeholder="Title goes here">
-        <!--<select name="modules">
-          <option value="ra">Recherarchitektur</option>
-          <option value="db">Datenbanken</option>
-          <option value="ml">Maschinelles Lernen</option>
-          <option value="kk">Künstliche Kognition</option>
-          <option value="se">Software Engineering</option>
-          <option value="mathe">Mathe Vertiefung</option>
-        </select>-->
-        <input id="dateInput" type="text" placeholder="DD/MM" maxlength="5">
-        <button class="submit"><i class="fas fa-arrow-right"></i></button>
-      </div>
-    </div>
     <p class="title">Notizen</p>
     <!--Notes-->
     <div class="notes" id="notes">
-      Keine Notizen<br>( ͡ ͡° ͜ ʖ ͡ ͡°)<br>╭☞ ╭☞
+      Fehler beim Laden der Notizen!
     </div>
   </section>
 
