--- a/ws2122/index.html
+++ b/ws2122/index.html
@@ -11,7 +11,7 @@
   <script src="script.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-<body onload="readRequest(false)">
+<body onload="readRequest(true)">
   <!--"Stundenplan"-->
   <div class="table">
     <div class="leftRow">
@@ -110,6 +110,7 @@
         <a class="moduleLink lr" href="https://bis.uni-bielefeld.de/sites/40704/Start.aspx">Lernraum</a>
         <a class="moduleLink lrplus" href="https://lernraumplus.uni-bielefeld.de/course/view.php?id=10999">Lernraum+</a>
         <a class="moduleLink video" href="https://uni-bielefeld.cloud.panopto.eu/Panopto/Pages/Sessions/List.aspx#folderID=%22c1b650fe-62e1-40f7-ab98-ada500b5a837%22">Videos</a>
+        <a class="moduleLink" href="https://lernraumplus.uni-bielefeld.de/pluginfile.php/582471/mod_resource/content/1/course_overview.pdf">Course Overview</a>
       </div>
     </div>
     <!--Task -->
