--- a/ws2122/index.html
+++ b/ws2122/index.html
@@ -93,6 +93,8 @@
         <a class="moduleLink lrplus" href="https://lernraumplus.uni-bielefeld.de/course/view.php?id=11464">LR+ Tutorium</a>
         <a class="moduleLink lrplus" href="https://lernraumplus.uni-bielefeld.de/course/view.php?id=11466">LR+ Seminar</a>
         <a class="moduleLink matrix" href="https://app.element.io/#/room/#uebung6-se-teams:uni-bielefeld.de">Matrix</a>
+        <a class="moduleLink redmine" href="https://se.techfak.de/projects">Redmine</a>
+        <a class="moduleLink jenkins" href="https://citdpe.techfak.uni-bielefeld.de/">Jenkins</a>
       </div>
       <div class="moduleItem">
         <p class="moduleTitle">Mathe Vertiefung</p>
