--- a/ws2122/index.html
+++ b/ws2122/index.html
@@ -11,7 +11,7 @@
   <script src="script.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-<body onload="readRequest(true)">
+<body onload="readRequest(false)">
   <!--"Stundenplan"-->
   <div class="table">
     <div class="leftRow">
@@ -143,7 +143,6 @@
   <p class="kalenderwoche" id="kw">KW 187</p>
   <button id="refresh" onclick="readRequest(true)"><i class="fas fa-sync-alt"></i></button>
 
-  <!-- :) -->
 
 </body>
 </html>
