removing mail adress

--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
         </div>
 
         <div class="bottom">
-          <p>Contact: info<i class="fas fa-at"></i>noahschuette.de</p> <span>&#8226;</span> <a href="https://twitter.com/_n0j0">Twitter</a>
+          <p>Contact me via my <a href="https://twitter.com/_n0j0">Twitter</a> account</p>
+          <!--<p>Contact: info<i class="fas fa-at"></i>noahschuette.de</p> <span>&#8226;</span> <a href="https://twitter.com/_n0j0">Twitter</a>-->
         </div>
 
       </div>
