--- a/ws2122/index.html
+++ b/ws2122/index.html
@@ -116,7 +116,7 @@
       </div>
     </div>
 
-    <button id="showJSONpart" onclick="showJSONpart()" class="showJSONpart">TODO & Tabelle anzeigen</button>
+    <button id="showJSONpart" onclick="showJSONpart()" class="showJSONpart">TODO & Punktetabelle laden</button>
 
     <!--<p class="title">TO-DO</p>
     <div id="tasks" class="tasks">
@@ -132,8 +132,8 @@
     <p class="title">Notizen</p>
     <div class="notes" id="notes">
       Fehler beim Laden der Notizen!
-    </div>
-  </section>-->
+    </div>-->
+  </section>
 
   <!--KW-->
   <p class="kalenderwoche" id="kw">KW 187</p>
