changing main page

--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
     <link href="style.css" rel="stylesheet" type="text/css"/>
     <link href="mobile.css" rel="stylesheet" type="text/css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--Google Font & FontAwesome Imports -->
+    <!--Google Font, FontAwesome & DEVICON Imports -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@300;500;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/038f795198.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.14.0/devicon.min.css">
     <!-- Scripts -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="script.js"></script>
@@ -69,30 +70,49 @@
 
       <div class="subsecAbout">
         <p class="txtHeader">about me</p>
-        <div class="aboutSections">
-          <div class="aboutLeft">
-            <h3>I am</h3>
-            <h4>Noah, 21 years old</h4>
-            <h3>I live in</h3>
-            <h4>Bielefeld, Germany</h4>
-            <h3>I study</h3>
-            <h4>computer science & cognitive systems</h4>
-            <h4><b>at</b> Bielefeld University</h4>
+
+        <div class="newAboutHeader">
+          <p>I'm Noah Schütte, 21y/o from Germany</p>
+          <p>I like to code various things, mainly web & desktop applications and indie games</p>
+          <p>I'm currently studying computer science & cognitive systems at Bielefeld University</p>
+        </div>
+
+        <div class="newAboutCode">
+          <div class="newCodeSegment">
+            <p>Languages</p>
+            <div class="codeIcons">
+              <i title="Javascript" class="devicon-javascript-plain"></i>
+              <i title="Java" class="devicon-java-plain"></i>
+              <i title="C#" class="devicon-csharp-plain"></i>
+              <i title="HTML5" class="devicon-html5-plain-wordmark"></i>
+              <i title="CSS" class="devicon-css3-plain-wordmark"></i>
+              <i title="Haskell" class="devicon-haskell-plain"></i>
+              <i title="Python" class="devicon-python-plain"></i>
+            </div>
           </div>
-          <div class="aboutRight">
-            <h3>Languages:</h3>
-            <h4>C#, Java, HTML/CSS,<br>JS, Haskell, Python</h4>
-            <h3>Frameworks & Engines:</h3>
-            <h4>Unity Engine, <br>(NodeJS, Electron)</h4>
-            <h3>IDEs:</h3>
-            <h4>Intellij IDEA, Visual Studio, <br>WebStorm</h4>
-            <h3>Tools:</h3>
-            <h4>Piskel, Figma, Atom</h4>
+          <div class="newCodeSegment">
+            <p>Frameworks</p>
+            <div class="codeIcons">
+              <i title="Unity Engine" class="devicon-unity-original"></i>
+              <i title="Android" class="devicon-android-plain"></i>
+              <i title="NodeJS" class="devicon-nodejs-plain"></i>
+              <i title="Electron" class="devicon-electron-original"></i>
+            </div>
+          </div>
+          <div class="newCodeSegment">
+            <p>IDE's & Tools</p>
+            <div class="codeIcons">
+              <i title="Intellij IDEA" class="devicon-intellij-plain"></i>
+              <i title="Webstorm" class="devicon-webstorm-plain"></i>
+              <i title="VisualStudio" class="devicon-visualstudio-plain"></i>
+              <i title="Atom" class="devicon-atom-original"></i>
+              <i title="Figma" class="devicon-figma-plain"></i>
+            </div>
           </div>
         </div>
 
         <div class="bottom">
-          <p>Contact me via my <a href="https://twitter.com/_n0j0">Twitter</a> account</p>
+          <p><i class="fab fa-twitter"></i> Contact me via my <a href="https://twitter.com/_n0j0">Twitter</a> account</p>
           <!--<p>Contact: info<i class="fas fa-at"></i>noahschuette.de</p> <span>&#8226;</span> <a href="https://twitter.com/_n0j0">Twitter</a>-->
         </div>
 
