changing ws21/22 page

--- a/ws2122/index.html
+++ b/ws2122/index.html
@@ -38,7 +38,7 @@
       <div class="item"></div>
       <div class="item gml"><p class="moduleTime">12:15-13:45</p><p class="moduleTxt">Maschinelles Lernen</p><p class="subTxt">Q&A</p><a class="zoomIcon" href="https://uni-bielefeld.zoom.us/j/94957231520?pwd=bVBwMUVidzZ4SGhrR0srVHViN2tjQT09"><i class="fas fa-video"></i></a></div>
       <div class="item"></div>
-      <div class="item tut softwTut"><p class="moduleTime">16:15-17:45</p><p class="moduleTxt">Software Engineering</p><p class="subTxt">Seminar</p><p class="locationTxt">D2-136</p><a class="zoomIcon" href="https://lernraumplus.uni-bielefeld.de/mod/url/view.php?id=492165"><i class="fas fa-video"></i></a></div>
+      <div class="item tut softwTut"><p class="moduleTime">16:15-17:45</p><p class="moduleTxt">Software Engineering</p><p class="subTxt">Seminar</p><p class="locationTxt">D2-136</p><a class="zoomIcon" href="https://uni-bielefeld.zoom.us/j/91050929243?pwd=V2o2MG02LzBRbThTTjZOTjd1NWUvUT09"><i class="fas fa-video"></i></a></div>
       <div class="item"></div>
     </div>
     <div class="row">
@@ -63,7 +63,7 @@
       <div class="headerItem"><p>Freitag</p></div>
       <div class="item"></div><div class="item"></div>
       <div class="item tut databTut"><p class="moduleTime">12:15-13:45</p><p class="moduleTxt">Datenbanken</p><p class="subTxt">Tutorium</p><a class="zoomIcon" href="https://uni-bielefeld.zoom.us/j/98173678171?pwd=TnRlTDN2NXFSUzBoTHdWZHpFNjhCQT09"><i class="fas fa-video"></i></a></div>
-      <div class="item tut softwTut"><p class="moduleTime">14:15-15:45</p><p class="moduleTxt">Software Engineering</p><p class="subTxt">Tutorium</p><p class="locationTxt">V2-221/222</p><a class="zoomIcon" href="https://lernraumplus.uni-bielefeld.de/mod/url/view.php?id=492040"><i class="fas fa-video"></i></a></div>
+      <div class="item tut softwTut"><p class="moduleTime">14:15-15:45</p><p class="moduleTxt">Software Engineering</p><p class="subTxt">Tutorium</p><p class="locationTxt">V2-221/222</p><a class="zoomIcon" href="https://uni-bielefeld.zoom.us/j/93230946026?pwd=cVNtY0dPTEJRd1hKSzRoK1FNTFI3UT09"><i class="fas fa-video"></i></a></div>
       <div class="item"></div>
       <div class="item"></div>
     </div>
@@ -128,6 +128,31 @@
     </div>
     <p class="title">Punktetabelle</p>
     <div class="points" id="points">
+      <div class="scala">
+        <div class="scalaMain">
+          <p class="scalaTitle">template</p>
+          <p class="scalaPercentage">50%</p>
+        </div>
+        <div class="scalaSub">
+          <p class="scalaPoints">5/10</p>
+          <p class="scalaPoints"><b>= 5/10</b></p>
+        </div>
+      </div>
+    </div>
+    <p class="title">Klausurtermine</p>
+    <div class="tests" id="tests">
+      <div class="testsColumn">
+        <p class="testsHeader">Fach</p>
+        <p class="mathe">Grundlagen Kongitiver Systeme</p>
+      </div>
+      <div class="testsColumn">
+        <p class="testsHeader">Erstklausur</p>
+        <p>4.20.</p>
+      </div>
+      <div class="testsColumn">
+        <p class="testsHeader">Zweitklausur</p>
+        <p>13.37</p>
+      </div>
     </div>
     <p class="title">Notizen</p>
     <div class="notes" id="notes">
