changing ws21/22 to ss2022

--- a/ws2122/index.html
+++ b/ws2122/index.html
@@ -1,169 +1,11 @@
 <!DOCTYPE html>
-<html lang="de" dir="ltr">
+<html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>WS21/22 Links</title>
-  <link rel="shortcut icon" href="icon.png">
-  <link rel="stylesheet" href="style.css">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-  <script src="https://kit.fontawesome.com/038f795198.js" crossorigin="anonymous"></script>
-  <script src="script.js"></script>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
+    <title>SS2022</title>
+    <meta http-equiv="refresh" content="0; url=https://noahschuette.de/ss2022" />
 </head>
-<body onload="onloaded()">
-  <!--"Stundenplan"-->
-  <div class="table">
-    <div class="leftRow">
-      <div class="headerItem"></div>
-      <div class="leftItem"><p>8:15-9:45</p></div>
-      <div class="leftItem"><p>10:15-11:45</p></div>
-      <div class="leftItem"><p>12:15-13:45</p></div>
-      <div class="leftItem"><p>14:15-15:45</p></div>
-      <div class="leftItem"><p>16:15-17:45</p></div>
-      <div class="leftItem"><p>18:15-19:45</p></div>
-    </div>
-    <div class="row">
-      <div class="headerItem"><p>Montag</p></div>
-      <div class="item ra"><p class="moduleTime">10:15-11:45</p><p class="moduleTxt">Rechnerarchitektur</p><p class="subTxt">Q&A</p><a class="zoomIcon" href="https://uni-bielefeld.zoom.us/j/98278914859?pwd=VVNHbGZHVHpFNEN3VUk4Vy9EWDNzdz09"><i class="fas fa-video"></i></a></div>
-      <div class="item"></div>
-      <div class="item tut gmlTut"><p class="moduleTime">12:15-13:45</p><p class="moduleTxt">Maschinelles Lernen</p><p class="subTxt">Tutorium</p><p class="locationTxt">T2-204</p></div>
-      <div class="item tut gkkTut"><p class="moduleTime">14:15-15:45</p><p class="moduleTxt">Künstliche Kognition</p><p class="subTxt">Tutorium</p><p class="locationTxt">V2-121</p></div>
-      <div class="item"></div>
-      <div class="item tut matheTut"><p class="moduleTime">18:15-19:45</p><p class="moduleTxt">Vertiefung Mathe</p><p class="subTxt">Tutorium</p><a class="zoomIcon" href="https://uni-bielefeld.zoom.us/j/95856138931?pwd=bXNmeXlrK00yOWRCcFZKQ1VNbGpldz09"><i class="fas fa-video"></i></a></div>
-    </div>
-    <div class="row">
-      <div class="headerItem"><p>Dienstag</p></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item gml"><p class="moduleTime">12:15-13:45</p><p class="moduleTxt">Maschinelles Lernen</p><p class="subTxt">Q&A</p><a class="zoomIcon" href="https://uni-bielefeld.zoom.us/j/94957231520?pwd=bVBwMUVidzZ4SGhrR0srVHViN2tjQT09"><i class="fas fa-video"></i></a></div>
-      <div class="item"></div>
-      <div class="item tut softwTut"><p class="moduleTime">16:15-17:45</p><p class="moduleTxt">Software Engineering</p><p class="subTxt">Seminar</p><p class="locationTxt">D2-136</p><a class="zoomIcon" href="https://uni-bielefeld.zoom.us/j/91050929243?pwd=V2o2MG02LzBRbThTTjZOTjd1NWUvUT09"><i class="fas fa-video"></i></a></div>
-      <div class="item"></div>
-    </div>
-    <div class="row">
-      <div class="headerItem"><p>Mittwoch</p></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item tut raTut"><p class="moduleTime">12:15-13:45</p><p class="moduleTxt">Rechnerarchitektur</p><p class="subTxt">Tutorium</p><a class="zoomIcon" href="https://uni-bielefeld.zoom.us/j/92461656102?pwd=MUN4d2FINWNRN1JHN3pnMHVscUxSdz09"><i class="fas fa-video"></i></a></div>
-      <div class="item mathe"><p class="moduleTime">14:15-15:45</p><p class="moduleTxt">Vertiefung Mathe</p><p class="subTxt">Vorlesung</p><a class="zoomIcon" href="https://uni-bielefeld.zoom.us/j/99590266069?pwd=clVPQ1R0RFFpZjFTLy9QWXlVenRJQT09"><i class="fas fa-video"></i></a></div>
-      <div class="item"></div>
-      <div class="item"></div>
-    </div>
-    <div class="row">
-      <div class="headerItem"><p>Donnerstag</p></div>
-      <div class="item"></div>
-      <div class="item gkk"><p class="moduleTime">10:15-11:45</p><p class="moduleTxt">Künstliche Kognition</p><p class="subTxt">Vorlesung</p><p class="locationTxt">CITEC, ONLINE</p><a class="zoomIcon" href="https://uni-bielefeld.zoom.us/j/97844339936?pwd=VTZlS0ZHcHZ4YkxaQStjVW9kK1E4dz09"><i class="fas fa-video"></i></a></div>
-      <div class="item softw"><p class="moduleTime">12:15-13:45</p><p class="moduleTxt">Software Engineering</p><p class="subTxt">Vorlesung</p><p class="locationTxt">H4, ONLINE</p><a class="zoomIcon" href="https://uni-bielefeld.zoom.us/j/99037007233?pwd=S1R0THVDeTFYcnZNNWc3dm5tWFFsZz09"><i class="fas fa-video"></i></a></div>
-      <div class="item datab"><p class="moduleTime">14:15-15:45</p><p class="moduleTxt">Datenbanken</p><p class="subTxt">Vorlesung</p><a class="zoomIcon" href="https://uni-bielefeld.zoom.us/j/92498693783?pwd=eklWYU5KQ0Y2RGxjS1UrWXNzck5MZz09"><i class="fas fa-video"></i></a></div>
-      <div class="item"></div>
-      <div class="item"></div>
-    </div>
-    <div class="row">
-      <div class="headerItem"><p>Freitag</p></div>
-      <div class="item"></div><div class="item"></div>
-      <div class="item tut databTut"><p class="moduleTime">12:15-13:45</p><p class="moduleTxt">Datenbanken</p><p class="subTxt">Tutorium</p><a class="zoomIcon" href="https://uni-bielefeld.zoom.us/j/98173678171?pwd=TnRlTDN2NXFSUzBoTHdWZHpFNjhCQT09"><i class="fas fa-video"></i></a></div>
-      <div class="item tut softwTut"><p class="moduleTime">14:15-15:45</p><p class="moduleTxt">Software Engineering</p><p class="subTxt">Tutorium</p><p class="locationTxt">V2-221/222</p><a class="zoomIcon" href="https://uni-bielefeld.zoom.us/j/93230946026?pwd=cVNtY0dPTEJRd1hKSzRoK1FNTFI3UT09"><i class="fas fa-video"></i></a></div>
-      <div class="item"></div>
-      <div class="item"></div>
-    </div>
-  </div>
-
-  <section id="rightPart">
-    <!---Fächer-->
-    <p id="upperTitle" class="title">Module</p>
-    <div class="modules">
-      <div class="moduleItem">
-        <a class="moduleLink" id="ekvv" href="https://ekvv.uni-bielefeld.de/kvv_publ/publ/benvw_Login_MatrikelAct">eKVV</a>
-        <a class="moduleLink" href="https://docs.google.com/spreadsheets/d/1gHT5yleFO7J8022jn4L9Je-N-mDim4P59t-0V5LPmRo/edit#gid=1893177104">Liste (Google-Sheets)</a>
-      </div>
-      <div class="moduleItem">
-        <p class="moduleTitle">Rechnerarchitektur</p>
-        <a class="moduleLink techfak" href="https://www.ti.uni-bielefeld.de/html/teaching/WS2122/techinf1/index.html">TechFak</a>
-        <a class="moduleLink techfak" href="https://www.ti.uni-bielefeld.de/downloads/WS2122/techinf1/VIDEOCAPTURE/ra_videos_weekly.html">Videos (mit PW)</a>
-        <a class="moduleLink lrplus" href="https://lernraumplus.uni-bielefeld.de/course/view.php?id=11124">Lernraum+</a>
-      </div>
-      <div class="moduleItem">
-        <p class="moduleTitle">Datenbanken</p>
-        <a class="moduleLink lrplus" href="https://lernraumplus.uni-bielefeld.de/course/view.php?id=11379">Lernraum+</a>
-      </div>
-      <div class="moduleItem">
-        <p class="moduleTitle">Software Engineering</p>
-        <a class="moduleLink lrplus" href="https://lernraumplus.uni-bielefeld.de/course/view.php?id=11465">LR+ Vorlesung</a>
-        <a class="moduleLink lrplus" href="https://lernraumplus.uni-bielefeld.de/course/view.php?id=11464">LR+ Tutorium</a>
-        <a class="moduleLink lrplus" href="https://lernraumplus.uni-bielefeld.de/course/view.php?id=11466">LR+ Seminar</a>
-        <a class="moduleLink matrix" href="https://app.element.io/#/room/#uebung6-se-teams:uni-bielefeld.de">Matrix</a>
-        <a class="moduleLink redmine" href="https://se.techfak.de/projects">Redmine</a>
-        <a class="moduleLink jenkins" href="https://citdpe.techfak.uni-bielefeld.de/">Jenkins</a>
-      </div>
-      <div class="moduleItem">
-        <p class="moduleTitle">Mathe Vertiefung</p>
-        <a class="moduleLink lrplus" href="https://lernraumplus.uni-bielefeld.de/course/view.php?id=10376">Lernraum+</a>
-        <a class="moduleLink dropbox" href="https://www.dropbox.com/sh/pezap2y3u3zwqkn/AABCeI_IHB4O5gmcb9-NDz-Ia?dl=0">Dropbox Folien</a>
-      </div>
-      <div class="moduleItem">
-        <p class="moduleTitle">Künstliche Kognition</p>
-        <a class="moduleLink lr" href="https://bis.uni-bielefeld.de/sites/42103/Start.aspx">Lernraum</a>
-        <a class="moduleLink lrplus" href="https://lernraumplus.uni-bielefeld.de/course/view.php?id=11690">LR+ Vorlesung</a>
-        <a class="moduleLink lrplus" href="https://lernraumplus.uni-bielefeld.de/course/view.php?id=11729">LR+ Tutorium</a>
-      </div>
-      <div class="moduleItem">
-        <p class="moduleTitle">Maschinelles Lernen</p>
-        <a class="moduleLink lr" href="https://bis.uni-bielefeld.de/sites/40704/Start.aspx">Lernraum</a>
-        <a class="moduleLink lrplus" href="https://lernraumplus.uni-bielefeld.de/course/view.php?id=10999">Lernraum+</a>
-        <a class="moduleLink video" href="https://uni-bielefeld.cloud.panopto.eu/Panopto/Pages/Sessions/List.aspx#folderID=%22c1b650fe-62e1-40f7-ab98-ada500b5a837%22">Videos</a>
-        <a class="moduleLink" href="https://lernraumplus.uni-bielefeld.de/pluginfile.php/582471/mod_resource/content/1/course_overview.pdf">Course Overview</a>
-      </div>
-    </div>
-
-    <button id="showJSONpart" onclick="showJSONpart()" class="showJSONpart">TODO & Punktetabelle laden</button>
-
-    <!--<p class="title">TO-DO</p>
-    <div id="tasks" class="tasks">
-      <div class="taskInput">
-        <input id="titleInput" type="text" placeholder="New Task">
-        <input id="dateInput" type="text" placeholder="DD/MM" maxlength="5">
-        <button class="submit" onclick="addTask()"><i class="fas fa-arrow-right"></i></button>
-      </div>
-    </div>
-    <p class="title">Punktetabelle</p>
-    <div class="points" id="points">
-      <div class="scala">
-        <div class="scalaMain">
-          <p class="scalaTitle">template</p>
-          <p class="scalaPercentage">50%</p>
-        </div>
-        <div class="scalaSub">
-          <p class="scalaPoints">5/10</p>
-          <p class="scalaPoints"><b>= 5/10</b></p>
-        </div>
-      </div>
-    </div>
-    <p class="title">Klausurtermine</p>
-    <div class="tests" id="tests">
-      <div class="testsColumn">
-        <p class="testsHeader">Fach</p>
-        <p class="mathe">Grundlagen Kongitiver Systeme</p>
-      </div>
-      <div class="testsColumn">
-        <p class="testsHeader">Erstklausur</p>
-        <p>4.20.</p>
-      </div>
-      <div class="testsColumn">
-        <p class="testsHeader">Zweitklausur</p>
-        <p>13.37</p>
-      </div>
-    </div>
-    <p class="title">Notizen</p>
-    <div class="notes" id="notes">
-      Fehler beim Laden der Notizen!
-    </div>-->
-  </section>
-
-  <!--KW-->
-  <p class="kalenderwoche" id="kw">KW 187</p>
-  <!--<button id="refresh" onclick="readRequest(true)"><i class="fas fa-sync-alt"></i></button>-->
-
+<body>
 
 </body>
 </html>
