--- a/404.html
+++ b/404.html
@@ -11,11 +11,11 @@
 <body>
 
 <div id="scene" data-relative-input="true">
-    <img src="error/space0.png" data-depth='1' class="paramimg" id="img-0"/>
-    <img src="error/space1.png" data-depth='0.7' class="paramimg" id="img-1"/>
-    <img src="error/space2.png" data-depth='0.3' class="paramimg" id="img-2"/>
-    <img src="error/space3.png" data-depth='0.1' class="paramimg" id="img-3"/>
-    <img src="error/space4.png" data-depth='0.05' class="paramimg" id="img-4"/>
+    <img src="https://noahschuette.github.io/error/space0.png" data-depth='1' class="paramimg" id="img-0"/>
+    <img src="https://noahschuette.github.io/error/space1.png" data-depth='0.7' class="paramimg" id="img-1"/>
+    <img src="https://noahschuette.github.io/error/space2.png" data-depth='0.3' class="paramimg" id="img-2"/>
+    <img src="https://noahschuette.github.io/error/space3.png" data-depth='0.1' class="paramimg" id="img-3"/>
+    <img src="https://noahschuette.github.io/error/space4.png" data-depth='0.05' class="paramimg" id="img-4"/>
 </div>
 
 <section class="section">
