--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Error 404 - noahschuette</title>
-    <link rel="stylesheet" href="error/style.css">
+    <link rel="stylesheet" href="https://noahschuette.github.io/error/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="https://noahschuette.github.io/images/logo.png">
