--- a/index.html
+++ b/index.html
@@ -47,11 +47,16 @@
       <div id="p" class="secProjectsTitle">
         <p class="txtHeader">projects</p>
         <div class="secProjects">
-          <div onclick="window.location='https://n0j0games.github.io/smashteroid';" id="proj3" class="divProject" style="cursor: pointer;" >
+          <div onclick="window.location='https://releasr.netlify.app/';" id="proj6" class="divProject" style="cursor: pointer;" >
+            <div id="pfooter3" class="divFooter">
+              <a href="https://releasr.netlify.app/">releasr</a>
+            </div>
+          </div>
+          <!--<div onclick="window.location='https://n0j0games.github.io/smashteroid';" id="proj3" class="divProject" style="cursor: pointer;" >
             <div id="pfooter3" class="divFooter">
               <a href="https://n0j0games.github.io/smashteroid">Smashteroid</a>
             </div>
-          </div>
+          </div>-->
           <div onclick="window.location='https://palettebin.noahschuette.de';" id="proj4" class="divProject" style="cursor: pointer;" >
             <div id="pfooter1" class="divFooter">
               <a href="https://palettebin.noahschuette.de">Palettebin</a>
